[package]
name = "htdocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2.83"
stylist = { version = "0.10.0", features = ["yew"] }
rand = "0.3.17"
crossbeam = "0.8"
crossbeam-channel = "0.5"
gloo = "0.8.0"
gloo-timers = "0.2.6"
